--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -1,103 +1,112 @@
 <!doctype html>
 <html class="no-js" lang="fr">
 
-<head>
-  <meta charset="utf-8" />
-  <title>La Récréation</title>
-  <link rel="stylesheet" href="../../styles/foundation.min.css" />
-  <link rel="stylesheet" href="../../styles/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>La Récréation</title>
+    <link rel="stylesheet" href="../../styles/foundation.min.css" />
+    <link rel="stylesheet" href="../../styles/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Open+Sans" rel="stylesheet">
+  </head>
 
-<body class="bodyMenu">
+  <body class="bodyMenu">
 
-  <header id="header">
-    <div class="row">
-      <div class="columns large-12 medium-12 small-12">
-        <div class="laRecreation">
-          <h1><a href="../../index.html">La Récréation</a></h1>
-
-          <div class="tel_header">
-            <img src="../../images/phone.png" alt="logo téléphone" />
-            <p>05 62 22 88 08</p>
-          </div>
-          <div class="lang_header">
-            <img src="../../images/frenchFlag.png" alt="french flag" />
-            <img src="../../images/englishFlag.png" alt="english flag" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="menuSite">
+    <header id="header">
       <div class="row">
         <div class="columns large-12 medium-12 small-12">
+          <div class="laRecreation">
+            <h1><a href="../../index.html">La Récréation</a></h1>
 
-          <nav>
-            <ul>
-              <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </header>
-
-  <section>
-    <div class="row">
-      <div class="columns large-12 medium-12 small-12">
-        <div class="menusAndVine">
-          <div class="menu1">
-            <img src="../../images/crevette.png" alt="menu du Petit Ecolier">
-            <p class="textMenu1">Menu du Petit Ecolier</p>
-          </div>
-          <div class="menu2">
-          <img src="../../images/crevette.png" alt="Menu du Maître d'école">
-          <p class="textMenu2">Menu du Maître d'école</p>
-          </div>
-          <div class="menu3">
-          <img src="../../images/crevette.png" alt="Menu la Récréation">
-          <p class="textMenu3">Menu La Récréation</p>
-          </div>
-          <div class="menu4">
-          <img src="../../images/crevette.png" alt="Carte des vins">
-          <p class="textMenu4">Carte des vins</p>
+            <div class="tel_header">
+              <img src="../../images/phone.png" alt="logo téléphone" />
+              <p>05 62 22 88 08</p>
+            </div>
+            <div class="lang_header">
+              <img src="../../images/frenchFlag.png" alt="french flag" />
+              <img src="../../images/englishFlag.png" alt="english flag" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+      <div class="menuSite">
+        <div class="row">
+          <div class="columns large-12 medium-12 small-12">
 
-  <footer>
-    <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
-    <div class="row">
-      <div class="footerCss">
-        <div class="columns large-4 medium-4 small-4">
-          <div class="leftFooter">
-            <p>
-              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
-            </p>
-          </div>
-        </div>
-        <div class="columns large-4 medium-4 small-4">
-          <div class="middleFooter">
-            <p id="informationsFooter">La Récréation @2017 | 05 65 22 88 08</p>
-          </div>
-        </div>
-        <div class="columns large-4 medium-4 small-4">
-          <div class="rightFooter">
-            <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            <nav>
+              <ul>
+                <li><a class="lineUnderLink" href="../../index.html">Accueil du site</a></li>
+                <li><a class="lineUnderLink" href="../../pages/french/menuAndWine.html">Menus et carte des vins</a></li>
+                <li><a class="lineUnderLink" href="../../pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
+                <li><a class="lineUnderLink" href="../../pages/french/environment.html">Environnement</a></li>
+                <li><a class="lineUnderLink" href="../../pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
-    </div>
-  </footer>
-  <script type="text/javascript" src="../../scripts/main.js"></script>
-</body>
+    </header>
+
+    <section>
+      <div class="row">
+        <div class="columns large-12 medium-12 small-12">
+          <div class="menusAndVine">
+            <div class="menu1">
+              <div class="textMenu1">
+                <p class="textMenu1">Menu du Petit Ecolier
+                </p>
+              </div>
+            </div>
+            <div class="menu2">
+              <img src="../../images/menu2.jpg" alt="Menu du Maître d'école">
+              <div class="textMenu2">
+                <p class="textMenu2">Menu du Maître d'école</p>
+              </div>
+            </div>
+            <div class="menu3">
+              <img src="../../images/menu3.jpg" alt="Menu la Récréation">
+              <div class="textMenu3">
+                <p class="textMenu3">Menu La Récréation</p>
+              </div>
+            </div>
+            <div class="menu4">
+              <img src="../../images/vine.jpg" alt="Carte des vins">
+              <div class="textMenu4">
+                <p class="textMenu4">Carte des vins</p>
+              </div>
+            </div>
+          </div>
+          <div class="clearBoth"></div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <!--<link rel="stylesheet" href="styles/foundation.min.css" />-->
+      <div class="row">
+        <div class="footerCss">
+          <div class="columns large-4 medium-4 small-4">
+            <div class="leftFooter">
+              <p>
+                <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
+                <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+                <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
+                <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+                <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              </p>
+            </div>
+          </div>
+          <div class="columns large-4 medium-4 small-4">
+            <div class="middleFooter">
+              <p id="informationsFooter">La Récréation @2017 | 05 65 22 88 08</p>
+            </div>
+          </div>
+          <div class="columns large-4 medium-4 small-4">
+            <div class="rightFooter">
+              <a class="lineUnderLink" href="../../pages/french/legalMentions.html" title="Page Mentions légales">MENTIONS LEGALES</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script type="text/javascript" src="../../scripts/main.js"></script>
+  </body>
