It's time to English

--- a/pages/english/index.html
+++ b/pages/english/index.html
@@ -36,11 +36,11 @@
 
           <nav>
             <ul>
-              <li><a class="lineUnderLink" href="index.html">Accueil du site</a></li>
-              <li><a class="lineUnderLink" href="pages/french/menuAndWine.html">Menus et carte des vins</a></li>
-              <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html">Cours de cuisine et traiteur</a></li>
-              <li><a class="lineUnderLink" href="pages/french/environment.html">Environnement</a></li>
-              <li><a class="lineUnderLink" href="pages/french/contactAndPartner.html">Contact et partenaires</a></li>
+              <li><a class="lineUnderLink" href="index.html">Home page</a></li>
+              <li><a class="lineUnderLink" href="pages/french/menuAndWine.html">Menus and wine list</a></li>
+              <li><a class="lineUnderLink" href="pages/french/kitchenAndTakeAway.html">Cooking classes and take away</a></li>
+              <li><a class="lineUnderLink" href="pages/french/environment.html">Environment</a></li>
+              <li><a class="lineUnderLink" href="pages/french/contactAndPartner.html">Contact and partners</a></li>
             </ul>
           </nav>
         </div>
@@ -52,7 +52,7 @@
     <div class="row">
       <div class="columns large-6 medium-12 small-12">
         <div class="firstTextHome">
-          <h2>L’heure de <font color="#CC76CA">La Récréation</font> a sonné !<br/><br/></h2>
+          <h2>The hour of <font color="#CC76CA">La Récréation</font> rang!<br/><br/></h2>
           <p>Un restaurant dépaysant, complétement atypique dans une ancienne école de l’entre-deux guerres. Salle de classes, cour de récréation avec préau transformé en jardin luxuriant, où l’on déjeune sous le marronnier ou les platanes mûriers.
             <br/>
             <br/>Le soir venu l’éclairage met en relief les anciens murs de pierres de cette place idillyque et chargé d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des 4 coins du monde garantissant des légumes frais issu du potager qui jouxte le restaurant. Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
