--- a/pages/french/contactAndPartner.html
+++ b/pages/french/contactAndPartner.html
@@ -24,8 +24,8 @@
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <img src="../../images/frenchFlag.png" alt="french flag" />
-            <img src="../../images/englishFlag.png" alt="english flag" />
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -72,7 +72,20 @@
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextContact">
           <h2>NOS PARTENAIRES</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat rerum quas quibusdam iusto libero non illum facere optio! Tempora repellat ratione eaque architecto vero maiores aliquid aliquam non sed cupiditate!</p>
+          <p>Voulant respecter notre région et la mettre en valeur, nous travaillons avec des partenaires locaux qui permettent des produits de qualité.
+            <br/> Nos légumes d'été ou encore nos herbes aromatisées viennent du potager d'à côté ! Un potager entretenu par un ancien élève de l'école qui donne du cœur à l'ouvrage et donc du cœur à nos légumes.
+
+            <br/> Pour nos viandes ou poissons ? Ils sont directement choisis par le gérant de l'établissement de sorte à respecter notre engagement auprès des producteurs locaux ou français !
+
+            <br/> Pour finir sur une bonne note, notre carte de vins vous proposera une grande diversités pour accompagner tous nos mets. Des vins de régions comme le goûteux Château Lamartine et ses trois déclinaisons.
+            <br/>
+            <br/> La Recreation et ses partenaires n'attendent plus que vous !
+            <br/>
+            <br/> Liste des partenaires
+            <br/>
+            <br/> Voisin du restaurant : ( nom à vérifier )
+            <br/> Mets : Entreprise Métro Toulouse
+            <br/> Vins : à rajouter des que je suis chez moi .</p>
         </div>
       </div>
     </div>
@@ -85,11 +98,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
