--- a/pages/french/environment.html
+++ b/pages/french/environment.html
@@ -22,8 +22,8 @@
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <img src="../../images/frenchFlag.png" alt="french flag" />
-            <img src="../../images/englishFlag.png" alt="english flag" />
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -50,12 +50,16 @@
     <div class="row">
       <div class="columns large-12 medium-12 small-12">
         <div class="firstTextEnvironment">
-          <h2>NOTRE ENVIRONNEMENT</h2>
-          <p>Le village de « LES ARQUES » n’est pas un village que l’ont traverse mais un village où l’on reste toute la journée.
+          <h2>L’heure de La Récréation a sonné !</h2>
+          <p>
+            Un restaurant dépaysant, complètement atypique dans une ancienne école de l’entre-deux guerres vous invite à découvrir sa cuisine dans le petit village « Les Arques ». Salle de classes, cour de récréation avec préau ont été transformés en jardin luxuriant, où l’on déjeune sous le marronnier ou sous les platanes mûriers. Le soir venu, l’éclairage met en relief les anciens murs de pierres de cette place idyllique et chargée d’histoire où les artistes viennent exposer. Une cuisine inventive dans l’esprit du site, riche de saveurs et de surprises venue des quatre coins du monde qui garantie des légumes frais issus du potager jouxtant le restaurant.
+            <br/> Le restaurant organise régulièrement des cours de cuisine et développe un service de traiteur à domicile.
             <br/>
-            <br/>Sur la crête se sont installés depuis le XI éme siècle un village autour d’un Prieuré et dans la vallée une série de moulins ou autres édifices dédiés à des activités artisanales, voilà pour l’histoire.
+            <br/> Plus qu’un bon restaurant, c’est un voyage.
             <br/>
-            <br/>De tout cela il reste tout un patrimoine architectural très divers, de l’église romane aux moulins en passant par les pigeonniers, fours et autres chapelles avec fresque. </p>
+            <br/> Le restaurant se situe dans la commune des Arques, petit village situé au sud de la France dans la région « Midi Pyrénées » et plus précisément dans le département du Lot. Ce village se trouve à 26 km de Cahors et 26 km de Gourdon. Au sud du Périgord et au sud-est de la Dordogne, le village est classé pour l'église Saint Laurent, les Fresques de Saint Andrée, l'ancien doyenneté et sa tour. Les Arques est également connu pour son musée consacré à Ossip Zadkine, les ateliers des Arques faisant venir chaque année une douzaine d'artistes de toute l'Europe, et bien sûr le restaurant la Récréation. Que d'effervescence dans un si petit village de 217 habitants.
+
+          </p>
         </div>
       </div>
     </div>
@@ -70,9 +74,11 @@
         <div class="columns large-5 medium-12 small-12">
           <div class="secondTextEnvironment">
             <h2>LE MUSEE ZADKINE</h2>
-            <p>À l’abri des grandes voies de circulation automobile, même locales, le village a attiré dans les années 30 un grand sculpteur, Zadkine dont depuis 26 ans un musée perpétue le souvenir.
-              <br/>Le musée Zadkine a été conçu comme un centre de vie culturelle. Il propose les œuvres d’Ossip Zadkine qui s’y installa en 1934. C’est à Les Arques que sont présentées de prestigieuses œuvres et documents qui témoignent de la création de l’artiste : Grands bois, bronzes puissants. Gravures, photos. Cinq grandes sculptures animent le village. Des œuvres religieuses sont présentées dans l’église.
-              <br/>L’ouverture du musée a entraîné la naissance d’une résidence d’art contemporain dont les réalisations animent le bourg et ses alentours tous les étés. </p>
+            <p>Les Arques est un petit village situé dans le lot.
+              <br/>
+              <br/>Au XIème siècle s’est installé sur la crête un village autour d’un Prieuré et dans la vallée une série d’édifices dédiés à des activités artisanales.
+              <br/> De tout cela, il reste un patrimoine architectural très divers tel que l’église romane, les moulins, les pigeonniers, les fours et autres chapelles.
+              <br/> À l’abri des grandes voies de circulation automobile, même locales, le village a attiré dans les années 1930 un grand sculpteur, Zadkine dont, depuis 26 ans, un musée perpétue le souvenir. Le musée Zadkine a été conçu comme un centre de vie culturelle. C'est dans ce village que sont présentés de prestigieux documents et oeuvres qui témoignent de la création de l'artiste : Grands bois, bronzes puissants, gravures, photos. Cinq grandes sculptures animent le village.</p>
           </div>
         </div>
       </div>
@@ -83,13 +89,13 @@
         <div class="columns large-7 medium-7 small-12">
           <div class="thirdTextEnvironment">
             <h2>LA VALLÉE DE LA MASSE ET LE MARAIS DES ARQUES</h2>
-            <p>L’aménagement d’une zone dite “Espace Naturel Sensible” qui propose une visite très documentée des zones humides du village et le balisage de différents chemins de randonnée complètent la palette historique et artistique du village où l’on peut passer une journée riche et diverse.
+            <p>
+              L’aménagement d’une zone dite “Espace Naturel Sensible” propose une visite des zones humides du village et le balisage de différents chemins de randonnée.
+              <br/> Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs,…).
               <br/>
-              <br/>Depuis 1999, la vallée de la Masse et le marais des Arques ont été classés en Espace naturel sensible. Ce site est remarquable pour ses paysages et ses milieux naturels originaux (marais, roselière, bois et prairies humides, tourbière, forêt de feuillus,…); sa faune et sa flore rares (Damier de la succise, Agrion de mercure, Râle d’eau, Triton marbré, Renoncule langue,…) avec son cortège d’espèces protégées; son patrimoine culturel et historique d’un grand intérêt (moulins de la Masse, activité sidérurgique médiévale, chapelle Saint-André, …).
-              <br/>
-              <br/>Cet espace bénéficie d’un programme de gestion et de mise en valeur mené par le Conseil général du Lot, en partenariat avec les collectivités locales et différents acteurs (propriétaires, exploitants agricoles, chasseurs, randonneurs, …).
-              <br/>
-              <br/>Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent à vous.</p>
+              <br/> Son patrimoine culturel et historique d’un grand intérêt (moulins de la Masse, activité sidérurgique médiévale, chapelle Saint-André,…) continue d’attirer un grand nombre de touristes.
+              <br/> Pour découvrir cette zone humide, un circuit d’interprétation de 4,5 km a été construit en partie sur caillebotis. Ce circuit au départ du bourg des Arques, est équipé de bornes implantées tout au long du parcours. En y glissant les fiches du guide découverte, ces bornes se transforment en table d’orientation et permettent de comprendre les spécificités des espaces qui s’offrent aux randonneurs. Les Fresques de Saint Andrée, l’édifice pourrait être daté du XIème siècle d’après le plan, les techniques de construction et les peintures fin du XVème siècle.
+            </p>
           </div>
         </div>
         <div class="columns large-5 medium-5 small-12">
@@ -109,11 +115,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
