--- a/pages/french/legalMentions.html
+++ b/pages/french/legalMentions.html
@@ -18,12 +18,12 @@
           <h1><a href="../../index.html">La Récréation</a></h1>
 
           <div class="tel_header">
-           <img src="../../images/phone.png" alt="logo téléphone"/>
+            <img src="../../images/phone.png" alt="logo téléphone" />
             <p>05 62 22 88 08</p>
           </div>
           <div class="lang_header">
-            <img src="../../images/frenchFlag.png" alt="french flag" />
-            <img src="../../images/englishFlag.png" alt="english flag" />
+            <a href="../../index.html" title="passage à la partie française du site"><img src="../../images/frenchFlag.png" alt="french flag" /></a>
+            <a href="../../pages/english/index.html" title="Passage à la partie anglaise du site"><img src="../../images/englishFlag.png" alt="english flag" /></a>
           </div>
         </div>
       </div>
@@ -113,11 +113,11 @@
         <div class="columns large-4 medium-4 small-4">
           <div class="leftFooter">
             <p>
-              <a href="#" title="Page Mentions légales"><img src="../../images/tripavidsorIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
-              <a href="#" title="Page Mentions légales"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
+              <a href="https://www.tripadvisor.fr/Restaurant_Review-g1924570-d1899088-Reviews-La_Recreation-Les_Arques_Lot_Occitanie.html" title="Tripadvisor et La Récréation"><img src="../../images/tripadvisorIcon.jpg" alt="logo site"></a>
+              <a href="https://www.lafourchette.com/restaurant/la-recreation/19399" title="la fourchette et La Récréation"><img src="../../images/fourchetteIcon.jpg" alt="logo site"></a>
+              <a href="https://restaurant.michelin.fr/28qs6p2/la-recreation-les-arques" title="Page Mentions légales"><img src="../../images/michelinIcon.jpg" alt="Michelin et La Récréation"></a>
+              <a href="http://www.bonnestables-lot.fr" title="Site les Bonnes Tables du Lot"><img src="../../images/bonneTableIcon.jpg" alt="logo site"></a>
+              <a href="https://www.facebook.com/restaurant.larecreation/?fref=ts" title="Pages Facebook du restaurant"><img src="../../images/facebookIcon.jpg" alt="logo site"></a>
             </p>
           </div>
         </div>
