fell good music

--- a/pages/french/menuAndWine.html
+++ b/pages/french/menuAndWine.html
@@ -51,31 +51,31 @@
         <div class="columns large-12 medium-12 small-12">
           <div class="menusAndVine">
             <div class="menu1">
+             <img src="../../images/menu1.jpg" alt="menu1"/>
               <div class="textMenu1">
-                <p class="textMenu1">Menu du Petit Ecolier
+                <p>MENU DU PETIT ECOLIER
                 </p>
               </div>
             </div>
             <div class="menu2">
-              <img src="../../images/menu2.jpg" alt="Menu du Maître d'école">
+             <img src="../../images/menu2.jpg" alt="menu2"/>
               <div class="textMenu2">
-                <p class="textMenu2">Menu du Maître d'école</p>
+                <p>MENU DU MAITRE D'ECOLE</p>
               </div>
             </div>
             <div class="menu3">
-              <img src="../../images/menu3.jpg" alt="Menu la Récréation">
+             <img src="../../images/menu3.jpg" alt="menu3"/>
               <div class="textMenu3">
-                <p class="textMenu3">Menu La Récréation</p>
+                <p>MENU LA RECREATION</p>
               </div>
             </div>
             <div class="menu4">
-              <img src="../../images/vine.jpg" alt="Carte des vins">
+             <img src="../../images/vine.jpg" alt="vine"/>
               <div class="textMenu4">
-                <p class="textMenu4">Carte des vins</p>
+                <p>CARTE DES VINS</p>
               </div>
             </div>
           </div>
-          <div class="clearBoth"></div>
         </div>
       </div>
     </section>
